DSE backports
 * Allow the prepared statement cache size to be changed. (APOLLO-50)
 * Forward writes to replacement node when replace_address != broadcast_address (CASSANDRA-8523)
 * Fix authentication problem when invoking cqlsh copy from a SOURCE command (CASSANDRA-12642)
 * Decommissioned nodes will not rejoin the cluster (CASSANDRA-8801)
 * Only set broadcast_rpc_address on Ec2MultiRegionSnitch if it's not set (CASSANDRA-11356)
 * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
 * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
 * Don't write shadowed range tombstone (CASSANDRA-12030)
 * Reduce contention getting instances of CompositeType (CASSANDRA-10433)


2.1.16
 * Avoid infinitely looping result set when paging SELECT queries with
   an IN clause with duplicate keys by treating the IN values as a set instead
   of a list (CASSANDRA-12420)
 * Add system property to set the max number of native transport requests in queue (CASSANDRA-11363)
 * Include column family parameter when -st and -et are provided (CASSANDRA-11866)
 * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127) 
 * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)
 * Allow STCS-in-L0 compactions to reduce scope with LCS (CASSANDRA-12040)
 * cannot use cql since upgrading python to 2.7.11+ (CASSANDRA-11850)
 * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
 * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)


2.1.15
 * Account for partition deletions in tombstone histogram (CASSANDRA-12112)
 * Avoid stalling paxos when the paxos state expires (CASSANDRA-12043)
 * Remove finished incoming streaming connections from MessagingService (CASSANDRA-11854)
 * Don't try to get sstables for non-repairing column families (CASSANDRA-12077)